[tool.poetry]
name = "congress"
version = "0.1.0"
description = ""
authors = ["aurbina83 <aurbina83@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
beautifulsoup4 = "^4.12.3"
cssselect = "^1.2.0"
iso8601 = "^2.1.0"
lxml = "^5.3.0"
mechanize = "^0.4.10"
mock = "^5.1.0"
rtyaml = "^1.0.0"
python-dateutil = "^2.9.0.post0"
pytz = "^2024.2"
pyyaml = "^6.0.2"
scrapelib = "^2.3.0"
xmltodict = "^0.14.2"
packaging = "^24.2"
boto3 = {extras = ["s3"], version = "^1.36.6"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
